--- a/editor/initial_code/js_node.tmpl
+++ b/editor/initial_code/js_node.tmpl
@@ -2,7 +2,7 @@
 {% block env %}import assert from "assert";{% endblock env %}
 
 {% block start %}
-function knapsack(weight: number, items: [number, number][]||[number, number, number][]): number {
+function knapsack(weight: number, items: [...number][]): number {
     // your code here
     return 0;
 }
