--- a/editor/initial_code/python_3.tmpl
+++ b/editor/initial_code/python_3.tmpl
@@ -2,7 +2,7 @@
 {% block env %}{% endblock env %}
 
 {% block start %}
-def knapsack(weight: int, items: list[tuple[int, int]]|list[tuple[int, int, int]]) -> int:
+def knapsack(weight: int, items: list[tuple[int, int]|tuple[int, int, int]]) -> int:
     # your code here
     return 0
 {% endblock start %}
